--- a/source/activity.html.erb
+++ b/source/activity.html.erb
@@ -64,6 +64,13 @@
   <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">Talks</h2>
     <dl class="pl-2">
+      <dt>2025-12-06 北陸Ruby会議01 「Kaigi on Rails 2025におけるsubscreenの実装について」</dt>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">
+        <ul>
+          <li class="mb-1"><a class="text-(--font-color) underline" href="https://regional.rubykaigi.org/hokuriku01/#SESSION-8">北陸Ruby会議01「みんなのRubyの使い方」</a></li>
+          <li class="mb-1"><a class="text-(--font-color) underline" href="https://slide.rabbit-shocker.org/authors/unasuke/hokurikurk01/">北陸Ruby会議01 - unasuke - Rabbit Slide Show</a></li>
+        </ul>
+      </dd>
       <dt>2023-08-28 Ruby Association Activity Report 「RubyによるQUICプロトコルの他言語からの移植ならびに独自実装の作成」</dt>
       <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">
         <ul class="list-disc pl-0">
@@ -161,6 +168,9 @@
     <h2 class="text-2xl font-bold mb-3">Articles</h2>
     <h3 class="text-xl font-bold mb-3">Repro</h3>
     <ul class="list-disc pl-10 mb-4">
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://tech.repro.io/entry/2025/07/15/133716">Amazon BedrockでesaからKnowledge Baseを構築し、Slackから問い合わせるようにしてみたらどうだった？ - Repro Tech Blog</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://tech.repro.io/entry/2025/04/10/093753">EmbulkからMySQLに日本語のデータを挿入するときの落とし穴 - Repro Tech Blog</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://tech.repro.io/entry/2024/12/11/155731">AWS Lambda RuntimeをRuby3.3にしたら外部エンコーディングが変化した話 - Repro Tech Blog</a></li>
       <li class="mb-1"><a class="text-(--font-color) underline" href="https://tech.repro.io/entry/2021/12/14/100000">Repro のサーバーサイド開発環境を M1 Mac に対応させるまでの道のり(撤退編) - Repro Tech Blog</a></li>
       <li class="mb-1"><a class="text-(--font-color) underline" href="https://tech.repro.io/entry/2021/11/19/150000">Repro のサーバーサイド開発環境を M1 Mac に対応させるまでの道のり - Repro Tech Blog</a></li>
     </ul>
